sdk_tests/tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_callback.stderr
error[E0308]: mismatched types
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_callback.rs:14:1
   |
14 | #[callback(shortname = 0x02, zk = true)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `ZkState<_>`, found `u64`
   | expected due to this
   |
   = note: expected struct `ZkState<_>`
                found type `u64`
   = note: this error originates in the attribute macro `callback` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_callback.rs:14:1
   |
14 | #[callback(shortname = 0x02, zk = true)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u64`, found `ZkState<_>`
15 | fn callback(
   |    -------- arguments to this function are incorrect
   |
   = note: expected type `u64`
            found struct `ZkState<_>`
note: function defined here
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_callback.rs:15:4
   |
15 | fn callback(
   |    ^^^^^^^^
...
19 |     arg1: u64,
   |     ---------
   = note: this error originates in the attribute macro `callback` (in Nightly builds, run with -Z macro-backtrace for more info)
